--- a/InterfazControl/Intro.ui
+++ b/InterfazControl/Intro.ui
@@ -1137,26 +1137,26 @@ color: rgb(148, 148, 148);</string>
        <string>Please enter a name for your new mission: </string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_loading">
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>170</y>
-        <width>291</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="whatsThis">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color:  rgb(255, 255, 255);
+    </widget>
+    <widget class="QLabel" name="label_loading">
+     <property name="geometry">
+      <rect>
+       <x>1780</x>
+       <y>420</y>
+       <width>291</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="whatsThis">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:  rgb(255, 255, 255);
 font: bold 40pt;</string>
-      </property>
-      <property name="text">
-       <string>Loading...</string>
-      </property>
-     </widget>
+     </property>
+     <property name="text">
+      <string>Loading...</string>
+     </property>
     </widget>
     <zorder>label_bckgd</zorder>
     <zorder>btnNew</zorder>
@@ -1178,6 +1178,7 @@ font: bold 40pt;</string>
     <zorder>lblGamepad</zorder>
     <zorder>lblRepair</zorder>
     <zorder>keyboardGroup</zorder>
+    <zorder>label_loading</zorder>
    </widget>
    <widget class="QWidget" name="mission_page">
     <property name="styleSheet">
