--- a/InterfazControl/Intro.ui
+++ b/InterfazControl/Intro.ui
@@ -1199,30 +1199,6 @@ font: bold 40pt;</string>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
-     <widget class="QLabel" name="label_toastSS">
-      <property name="geometry">
-       <rect>
-        <x>510</x>
-        <y>910</y>
-        <width>591</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(70, 70, 70);
-font: 13pt ; font: bold;
-color: white;
- border-width: 1px;
- border-style: solid;
-  border-radius: 15px;</string>
-      </property>
-      <property name="text">
-       <string>Screenshot taken</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
     </widget>
     <widget class="QLabel" name="label_goHome">
      <property name="geometry">
@@ -2718,6 +2694,30 @@ font: bold 9pt;</string>
       <string/>
      </property>
     </widget>
+    <widget class="QLabel" name="label_toastSS">
+     <property name="geometry">
+      <rect>
+       <x>580</x>
+       <y>58</y>
+       <width>591</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(70, 70, 70);
+font: 13pt ; font: bold;
+color: white;
+ border-width: 1px;
+ border-style: solid;
+  border-radius: 10px;</string>
+     </property>
+     <property name="text">
+      <string>Photo taken</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
     <zorder>labelBackMW</zorder>
     <zorder>mplayerWG</zorder>
     <zorder>label_goHome</zorder>
@@ -2792,6 +2792,7 @@ font: bold 9pt;</string>
     <zorder>label_btnY</zorder>
     <zorder>label_toggle</zorder>
     <zorder>label_toggle_2</zorder>
+    <zorder>label_toastSS</zorder>
    </widget>
    <widget class="QWidget" name="explore_page">
     <property name="styleSheet">
